Add terraform awscli, jq and cygwin winpty shell

--- a/terraformers/Dockerfile
+++ b/terraformers/Dockerfile
@@ -1,21 +1,22 @@
 FROM quay.io/dtan4/terraforming:latest
 MAINTAINER nmrmsys nmrmsys@gmail.com
 
-RUN set -x; \
-    echo "http://dl-cdn.alpinelinux.org/alpine/edge/testing" >> /etc/apk/repositories; \
-    apk update; \
-    apk add terraform; \
-    mkdir /root/.aws; \
-    echo -e "[default]\naws_access_key_id = xxx\naws_secret_access_key = xxx" > /root/.aws/credentials; \
-    mkdir /root/tf; \
-    find /usr/bin -type f -name terraform-provider-\* | grep -v aws | xargs rm; \
-    rm -rf /var/cache/apk/*
-
-WORKDIR /root/tf
-
-ENV AWS_REGION ap-northeast-1
-
 COPY README.md /root
 
-CMD ["cat", "/root/README.md"]
+RUN set -x && \
+    echo "http://dl-cdn.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories && \
+    apk --update-cache --no-cache --upgrade add terraform groff less python py-pip jq && \
+    pip install awscli && \
+    apk --purge -v del py-pip && \
+    rm -rf /var/cache/apk/* && \
+    chmod -x /root/README.md && \
+    mkdir /root/.aws && \
+    echo -e "[default]\naws_access_key_id = xxx\naws_secret_access_key = xxx\n" \
+        > /root/.aws/credentials && \
+    echo -e "[default]\noutput = json\nregion = ap-northeast-1\n" \
+        > /root/.aws/config && \
+    mkdir /root/tf
 
+ENV AWS_REGION ap-northeast-1
+WORKDIR /root/tf
+CMD ["cat", "/root/README.md"]
